# pcconmonLibs

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ccpp.yml
src/lib/providerLib/: CMakeLists.txt
src/lib/providerLib/include/: commonInclude.hpp  configModificationProviderClasses.hpp  coreProviderClasses.hpp  hardwareInfoProviderClasses.hpp  winCmdExec.hpp
src/lib/structureLib/: CMakeLists.txt
src/lib/structureLib/include/: commonInclude.hpp  coreDataClasses.hpp  hardwareDataClasses.hpp
